<resources>
    <string name="Shoprise">SHOPRISE!</string>
    <string name="entrar">Enter</string>
    <string name="Logueate">Login</string>
    <string name="Recordar_contraseña">Remember password</string>
    <string name="Usuario">User</string>
    <string name="Registro">Sign Up</string>
    <string name="Nombre">Name</string>
    <string name="Apellidos">Surname</string>
    <string name="Email">Email</string>
    <string name="País">Country</string>
    <string name="Fecha_Nacimiento">Date of birth</string>
    <string name="Contraseña">Password</string>
    <string name="Repetir_contraseña">Repeat password</string>
    <string name="Numero_telefono">"Phone number "</string>
    <string name="Condiciones">" I accept the terms and conditions"</string>
    <string name="O">Or</string>
    <string name="Moda">Style</string>
    <string name="Deportes">Sports</string>
    <string name="Tecnología">Tecnology</string>
    <string name="title_activity_menu_desplegable">menu_desplegable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>