<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_degradado2"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/badscriptregular"
            android:text="@string/Shoprise"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textregistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registro"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textNombreR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/Nombre"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textApellR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/Apellidos"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textFechaNR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Fecha_Nacimiento"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textPaisR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/País"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textEmailR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Email"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textTelfR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/Numero_telefono"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textUsuarioR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/Usuario"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textContrR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/Contraseña"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textRepContrR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/Repetir_contraseña"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                v<EditText
                    android:id="@+id/TextNombreUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/TextApellUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/TextFechaUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="#FFFFFF" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="42dp" />

                <EditText
                    android:id="@+id/TextEmailUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/TextTelfUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:inputType="phone"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/TextPersonUsuarioR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF" />

                <EditText
                    android:id="@+id/TextPasswordR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="#FFFEFE" />

                <EditText
                    android:id="@+id/TextPasswordRepetirR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkCondiciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Condiciones"
                android:textColor="#000000" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_redondo"
        android:backgroundTint="#000000"
        android:text="@string/entrar"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>


